[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/icon.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Scripts/EnemyHealthbar.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.372549, 0.372549, 0.372549, 1 )

[sub_resource type="CircleShape2D" id=4]

[node name="Enemy" type="KinematicBody2D" groups=["Enemy", "NoiseListener"]]
light_mask = 2
collision_layer = 2
collision_mask = 65535
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
light_mask = 2
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 1 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -32.0
margin_top = -52.0
margin_right = 32.0
margin_bottom = -38.0
grow_horizontal = 2
text = "ENEMY"
align = 1

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = -32.0
margin_top = -38.0
margin_right = 32.0
margin_bottom = -33.0
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
max_value = 4.0
step = 1.0
value = 3.0
percent_visible = false
script = ExtResource( 3 )

[node name="AttackHitbox" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackHitbox"]
scale = Vector2( 2.5, 2.5 )
shape = SubResource( 4 )

[connection signal="healthChanged" from="." to="ProgressBar" method="_on_Enemy_healthChanged"]
[connection signal="body_entered" from="AttackHitbox" to="." method="_on_AttackHitbox_body_entered"]
[connection signal="body_exited" from="AttackHitbox" to="." method="_on_AttackHitbox_body_exited"]
